--- a/src/site/notes/Notes/Встреча с командой по марафону в Простом Сообществе.md
+++ b/src/site/notes/Notes/Встреча с командой по марафону в Простом Сообществе.md
@@ -1,4 +1,6 @@
 ---
-{"dg-publish":true,"permalink":"/notes/vstrecha-s-komandoj-po-marafonu-v-prostom-soobshhestve/"}
+{"dg-publish":true,"permalink":"/notes/vstrecha-s-komandoj-po-marafonu-v-prostom-soobshhestve/","tags":["gardenEntry"]}
 ---
 
+# Абра кадабра
+ЫЛовлыолвол
